p2/scripts/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: hello-kubernetes1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes1
  template:
    metadata:
      labels:
        app: hello-kubernetes1
    spec:
      hostNetwork: true
      containers:
      - name: hello-kubernetes1
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8081
#---
#apiVersion: v1
#kind: Service
#metadata:
  #name: app-one
#spec:
  #selector:
    #app: app-one
  #ports:
    #- protocol: TCP
      #port: 80
      #targetPort: 8081
