p2/scripts/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: hello-kubernetes2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes2
  template:
    metadata:
      labels:
        app: hello-kubernetes2
    spec:
      containers:
      - name: hello-kubernetes2
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-two
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
